# PyLegacy

./: .gitignore  .ruff.toml  AGENTS.md  AUTHORS  README.md  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.github/workflows/: python-package.yml  release.yml
.run/: PyTrain CityLife Client.run.xml  PyTrain CityLife Server.run.xml  PyTrain Sprucewood Server.run.xml  PyTrain Sprucewood.run.xml  PyTrain.run.xml
cli/: acc.py  cache.py  clear.py  configure.py  configure_accessories.py  engine.py  install.py  make_gui.py  make_service.py  piconfig.py  pytrain.py  reindex.py  switch.py
examples/: README.MD  buttons.py  cp.py  gantry_crane_block.py  rbuttons.py
legacy/cli/: cli_base.py  halt.py  remote.py  route.py  switch.py
legacy/protocol/: __init__.py  command_base.py  constants.py  halt_cmd.py  route_cmd.py  switch_cmd.py
scripts/: README.md  b2w.py  base_sh  change.py  compress.py  delete_failed_runs.sh  launch_pytrain.bash  pytrain_client.bash  pytrain_client.service  pytrain_server.bash  pytrain_server.service  rcr.py  release.yml  restore.py
src/: __init__.py
src/cli/: acc.py  cli_base.py  control.py  dialogs.py  echo.py  effects.py  engine.py  halt.py  lighting.py  pytrain.py  route.py  sounds.py  switch.py
src/comm/: comm_buffer.py  comm_buffer_proxy.py  command_listener.py  command_publisher.py  command_reader.py  enqueue_proxy_requests.py  serial_reader.py
src/db/: client_state_listener.py  component_state.py  component_state_listener.py  component_state_store.py  startup_state.py  state_watcher.py
src/gpio/: ads_1115.py  ads_1x15.py  analog_handler_i2c.py  controller.py  engine_controller.py  foo.py  gpio_handler.py  i2c.py  i2c_button.py  i2c_led.py  keypad.py  lcd.py  mcp23017.py  py_rotary_encoder.py  quilling_horn.py  state_source.py
src/gpio/i2c/: button_i2c.py  i2c_device.py  (+2 more)
src/install/: pytrain_server.bash
src/installation/: __init__.py  pytrain.bash.template  pytrain.service.template  pytrain_client.bash.template  pytrain_client.service.template  pytrain_server.bash.template  pytrain_server.service.template
src/pdi/: asc2_req.py  base3_buffer.py  base_req.py  bpc2_req.py  constants.py  irda_req.py  lcs_req.py  pdi_device.py  pdi_listener.py  pdi_req.py  pdi_state_store.py  stm2_req.py  wifi_req.py
src/protocol/: command_base.py  command_def.py  command_req.py  constants.py  halt_cmd.py  multibyte_constants.py  route_cmd.py  sequence_req.py  switch_cmd.py  tmcc1_constants.py  tmcc2_constants.py  validations.py
src/pytrain/: __init__.py  __version__.py
src/pytraincli/: __init__.py  acc.py  dialogs.py  echo.py  effects.py  engine.py  halt.py  lighting.py  pytrain.py  route.py  sounds.py  switch.py
src/utils/: argument_parser.py  dual_logging.py  expiring_set.py  ip_tools.py  logger.py  pollable_queue.py  text_utils.py  validations.py
test/: README.md  requirements.txt  test_base.py  test_pytest.py
test/atc/: test_block.py
test/cli/: test_make_gui.py  test_make_service.py
test/comm/: command_listener_test.py  conftest.py  test_command_listener.py  test_dispatch_listener.py  test_enqueue_proxy_requests.py
test/db/: conftest.py  test_accessory_state.py  test_client_state_listener.py  test_comp_data.py  test_component_state.py  test_component_state_store.py  test_component_state_store_ai.py  test_components.py  test_engine_state.py  test_prod_info.py  test_startup_state.py
test/gpio/: test_engine_status.py  test_gpio_device.py  test_i2c.py  test_mcp23017.py
test/gui/: __init__.py  test_amc2_ops_panel.py  test_component_state_gui.py  test_controller_view.py  test_dummy_gui_components.py  test_engine_gui_accessories.py  test_engine_gui_transitions.py  test_gas_station_gui.py  test_guizero_base.py  test_image_presenter.py  test_keypad_view.py  test_motors_gui.py  test_touch_list_box.py  test_wide_component_state_gui.py
test/pdi/: test bpc2_req.py  test_amc2_req.py  test_asc2_req.py  test_base3_buffer.py  test_base3_component.py  test_base_req.py  test_irda_req.py  test_pdi_listener.py  test_pdi_req.py  test_pdi_state_store.py
test/protocol/: test_command_base.py  test_command_req.py  test_constants.py  test_validations.py
test/utils/: path_util_tests.py  test_argument_parser.py  test_dual_logging.py  test_expiring_set.py  test_ip_tools.py  test_path_util.py  test_singleton.py  test_text_utils.py  test_unique_deque.py  test_wifi_info.py  text_utils_tests.py  unique_deque_tests.py
tests/: requirements.txt  test_pytest.py
tests/atc/: test_block.py
tests/cli/: test_cache.py  test_cache_cli.py  test_cache_sync_service.py  test_configure.py  test_make_gui.py  test_make_service.py
tests/comm/: test_command_listener.py  test_command_listener_ai.py  test_dispatch_listener.py  test_enqueue_proxy_requests.py
tests/db/: test_accessory_state.py  test_cache_sync.py  test_client_state_listener.py  test_comp_data.py  test_component_state.py  test_component_state_store.py  test_component_state_store_ai.py  test_components.py  test_engine_state.py  test_lcs_state_serialization.py  test_prod_info.py  test_startup_state.py  test_state_watcher.py
tests/gpio/: test_engine_status.py  test_gpio_device.py
tests/gui/: test_amc2_ops_panel.py  test_catalog_panel.py  test_component_state_gui.py  test_dummy_gui_components.py  test_editable_text.py  test_engine_gui_accessories.py  test_engine_gui_transitions.py  test_guizero_base.py  test_hold_button.py  test_image_presenter.py  test_keypad_view.py  test_motors_gui.py  test_scrolling_text.py  test_state_info_overlay.py  test_touch_list_box.py  test_wide_component_state_gui.py
tests/pdi/: conftest.py  test_asc2_req.py  test_base3_buffer.py  test_base_req.py  test_bpc2_req.py  test_constants.py  test_d4_req.py  test_lcs_req.py  test_pdi_listener.py  test_pdi_req.py  test_stm2_req.py
tests/protocol/: test_command_req.py  test_constants.py  test_validations.py
tests/utils/: test_argument_parser.py  test_dual_logging.py  test_expiring_set.py  test_ip_tools.py  test_path_util.py  test_pollable_queue.py  test_singleton.py  test_unique_deque.py  test_validations.py  test_wifi_info.py
(+312 files in other folders)
