[build-system]
requires = ["setuptools>=75.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pytrain-ogr"
dynamic = ["version"]
authors = [
    { name = "Dave Swindell", email = "pytraininfo@gmail.com" },
]
description = "Control Lionel TMCC/Legacy engines, switches, and accesseries from a Raspberry Pi"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = { file = "LICENSE" }

dependencies = [
    "RPLCD>= 1.4.0",
    "colorzero >= 2.0",
    "gpiozero >= 2.0.1",
    "guizero >= 1.6.0",
    "luma.oled >= 3.14.0",
    "psutil >= 5.9.8",
    "python-dotenv >= 1.2.1",
    "pyserial >= 3.5",
    "range-key-dict >= 1.1",
    "requests >= 2.32.5",
    "rpi-lgpio >= 0.6; platform_system == 'Linux'",
    "setuptools >= 80.9.0",
    "setuptools_scm >= 9.2.2",
    "smbus2 >= 0.6.0",
    "zeroconf >= 0.148.0",
    "spidev >= 3.8.0; platform_system == 'Linux'"
]

keywords = [
    "automation",
    "interactive",
    "control",
    "control panel",
    "legacy",
    "lionel",
    "model railroad",
    "o-gauge",
    "raspberry pi",
    "tmcc",
    "trains",
]

[tool.setuptools_scm]
version_file = "src/pytrain/_version.py"
version_scheme = "only-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
install = ["*.template", "*.jpg", "*.png", "*.ttf"]


[project.scripts]
pytrain = "pytrain:main"
piconfig = "pytrain.cli.piconfig:main"
make_gui = "pytrain.cli.make_gui:main"
make_service = "pytrain.cli.make_service:main"

[project.urls]
Homepage = "https://github.com/cdswindell/PyLegacy"
Source = "https://github.com/cdswindell/PyLegacy"
Issues = "https://github.com/cdswindell/PyLegacy/issues"

[tool.ruff]
line-length = 120
extend-exclude = ["test", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["F403", "F405"]
